test/trivial/bradc/entrypoint/wrongmain.good
error: main() function with invalid signature
wrongmain.chpl:4: note: in module wrongmain
